# Smart_waste_management

./: .env.example  .gitignore  CLAUDE.md  README.md  eim_config.toml  package-lock.json  package.json
cuopt/: Dockerfile
cuopt-client/: .env.example  README.md  constraints.py  osrm_client.py  test_solver.py  vrp_solver.py
docs/: architecture.md  cuopt-implementation.md  datalake.md  osrm.md
firmware/: CMakeLists.txt  README.md  nvs_data.csv  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.dev
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  idf_component.yml  main.c
firmware/main/connectivity/: mqtt_client.c  mqtt_client.h  ntp_sync.c  ntp_sync.h  sim800l.c  sim800l.h  sw_mqtt_client.c  wifi_sta.c  wifi_sta.h
firmware/main/measurement/: fill_calculator.c  fill_calculator.h  outlier_filter.c  outlier_filter.h
firmware/main/power/: sleep_manager.c  sleep_manager.h
firmware/main/sensors/: jsn_sr04t.c  jsn_sr04t.h  sensor_interface.h  vl53l1x.c  vl53l1x.h
frontend-dashboard/: .env.example  README.md  index.html  package-lock.json  package.json
frontend-driver/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
osrm/: Dockerfile  Dockerfile.ecr  README.md  build-data.sh  docker-compose.yml  test_osrm.py  truck-profile.lua
scripts/: backfill_routes_to_firehose.py  cleanup-iot-manual.sh  deploy.sh  post-deploy.sh  seed_routes.py
simulator/: fill_model.py  mqtt_publisher.py  simulator.py  zone_density.py
terraform/: .gitignore  README.md  analytics.tf  api-gateway.tf  dynamodb.tf  ecs.tf  iot.tf  (+7 more)
(+68 files in other folders)
