idf_component_register(
    SRCS
        "main.c"
        "sensors/jsn_sr04t.c"
        "sensors/vl53l1x.c"
        "measurement/fill_calculator.c"
        "measurement/outlier_filter.c"
        "connectivity/sim800l.c"
        "connectivity/sw_mqtt_client.c"
        "connectivity/ntp_sync.c"
        "connectivity/wifi_sta.c"
        "power/sleep_manager.c"
    INCLUDE_DIRS
        "."
        "sensors"
        "measurement"
        "connectivity"
        "power"
    REQUIRES
        driver
        esp_driver_gpio
        esp_driver_uart
        esp_driver_i2c
        esp_adc
        esp_event
        esp_netif
        esp_timer
        esp_wifi
        espressif__mqtt
        nvs_flash
        mbedtls
        lwip
    EMBED_TXTFILES
        "${PROJECT_DIR}/certs/AmazonRootCA1.pem"
)
